--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QR Attendance System</title>
+    <title>ezMark</title>
+    <!-- FontAwesome -->
+    <script src="https://kit.fontawesome.com/1c038f6c4d.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
