Resovling Security Hotspots

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ezMark</title>
     <!-- FontAwesome -->
-    <script src="https://kit.fontawesome.com/1c038f6c4d.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/1c038f6c4d.js"
+      integrity="sha256-WBauIelTnI9m4aJFIkpaGpG1wcSgZaSK3oZl5NCq0hE="
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
